--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3.8"
 services:
   web:
     image: nginx:latest
@@ -10,4 +10,4 @@ services:
   php:
     image: php:7-fpm
     volumes:
-        - ./web:/web
+      - ./web:/web
