--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 version: "3.8"
 services:
-  web:
-    image: nginx:latest
+  nginx:
+    hostname: procstop-nginx
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
     ports:
       - "8080:80"
-    volumes:
-      - ./web:/web
-      - ./site.conf:/etc/nginx/conf.d/default.conf
   php:
-    image: php:7-fpm
-    volumes:
-      - ./web:/web
+    hostname: procstop-php
+    build:
+      context: .
+      dockerfile: Dockerfile.php
