--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,5 +1,5 @@
 FROM nginx:latest
 LABEL maintainer="Phil"
 COPY site.conf /etc/nginx/conf.d/default.conf
-COPY web /web
+COPY web /var/www/html
 EXPOSE 80
