Fixed crate name.

--- a/procStop-client/Cargo.toml
+++ b/procStop-client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "proc-stop-client"
+name = "procstop-client"
 version = "0.1.0"
 authors = ["Phil <ph-ketteni@t-online.de>"]
 edition = "2018"
